22  January 2007: Wouter
	- Designed header file for network communication.

16  January 2007: Wouter
	- added readme.svn and readme.tests.

4 January 2007: Wouter
	- Testbed script (run on multiple platforms the test set).
	  Works on Sunos9, Sunos10, FreeBSD 6.1, Fedora core 5.
	- added unit test tpkg.

3 January 2007: Wouter
	- committed first set of files into subversion repository.
	  svn co svn+ssh://unbound.net/svn/unbound
	  You need a ssh login.  There is no https access yet.
	- Added LICENSE, the BSD license.
	- Added doc/README with compile help.
	- main program stub and quiet makefile.
	- minimal logging service (to stderr).
	- added postcommit hook that serves emails.
	- added first test 00-lint. postcommit also checks if build succeeds.
	- 01-doc: doxygen doc target added for html docs. And stringent test
	  on documented files, functions and parameters.

15 December 2006: Wouter
	- Created Makefile.in and configure.ac.